syntax = "proto3";
import "BasicTypes.proto";
import "DtoTypes.proto";

option csharp_namespace = "ToolModelService";

package ToolModels;

service ToolModels {
	rpc GetAllToolModels(NoParams) returns (ListOfToolModel);
	rpc InsertToolModel(ListOfToolModelDiff) returns (ListOfToolModel);
	rpc UpdateToolModel(ListOfToolModelDiff) returns (ListOfToolModel);
	rpc GetReferencedToolLinks(Long) returns (ListOfToolReferenceLink);
	rpc GetAllDeletedToolModels(NoParams) returns (ListOfToolModel);
}

message ListOfToolModelDiff{
	repeated ToolModelDiff toolModelDiffs = 1;
}
